# cirno

./: .editorconfig  .eslintignore  .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
app/: Cargo.toml
app/src/: app.rs  daemon.rs  ui_dispatcher.rs
app/src/daemon/: process.rs
app/src/log/: combined_logger.rs
app/src/server/controller/: app_stop.rs  window_close.rs  window_open.rs
app/src/ui_dispatcher/: webview.rs
cli/: Cargo.toml
cli/src/: gc.rs  init.rs  list.rs  main.rs
core/: Cargo.toml
core/src/: fs.rs  lib.rs  yarn.rs
core/src/yarn/: rc.rs
src/: cli.ts  index.ts  utils.ts  yarn.ts
src/commands/: backup.ts  clone.ts  create.ts  export.ts  gc.ts  import.ts  init.ts  list.ts  remove.ts  restore.ts  yarn.ts
tests/: backup.spec.ts  cache.spec.ts  export.spec.ts  index.spec.ts  init.spec.ts  prepare.ts  restore.spec.ts  serializer.ts  setup.ts  shared.ts
tests/__snapshots__/: index.spec.ts.snap  init.spec.ts.snap
tests/fixtures/: .gitignore
tests/fixtures/bar/: .yarnrc.yml  package.json
tests/fixtures/base/: package.json
tests/fixtures/baz/: package.json
tests/fixtures/dep-1/: package.json
tests/fixtures/dep-2/: package.json
tests/fixtures/foo/: package.json
tests/fixtures/patch-1/: package.json
tests/fixtures/patch-1/.yarn/patches/: js-yaml-npm-4.1.0-3606f32312.patch
tests/fixtures/patch-2/: package.json
tests/fixtures/patch-2/.yarn/patches/: js-yaml-npm-4.1.0-3606f32312.patch
tests/snapshots/: backup.spec.ts.snap  cache.spec.ts.snap  export.spec.ts.snap  init.spec.ts.snap  list.spec.ts.snap  patch.spec.ts.snap  restore.spec.ts.snap
tests/specs/: backup.spec.ts  cache.spec.ts  export.spec.ts  init.spec.ts  list.spec.ts  patch.spec.ts  restore.spec.ts
