[package]
name = "cirno-app"
description = ""
license.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
axum = { version = "0.8.7", features = ["http2", "macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
log = { version = "0.4.27", features = ["std"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tao = "0.34.5"
tap = "1.0.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
wry = "0.53.5"
