[package]
name = "cirno-cli"
description = ""
license.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
cirno-core = { version = "0.0.1", path = "../core" }
owo-colors = "4.2.3"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
